@@ -13,6 +13,7 @@
   --color: var(--default-color);
   --border-width: var(--default-border-width);
   --border-color: var(--default-border-color);
+  --text-decoration-thickness: auto;
 
   --serif-font-family: Georgia, 'Times New Roman', serif;
   --sansserif-font-family: system-ui;
