@@ -1,6 +1,7 @@
 # 0.17.0 (2020-XX-XX)
 
   * (margin) m[xy]0(25|5)
+  * (type) --text-decoration-thickness
 
 # 0.16.2 (2020-04-26)
 
